9-PostgreSQLWith2NodeInstall/postgres-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-master-ingress
  namespace: default
spec:
  entryPoints:
    - postgres # Traefik'te bu isimle bir entrypoint olmalı
  routes:
    - match: HostSNI(`*`) # TCP seviyesinde domain kontrolü zordur, her şeyi kabul et
      services:
        - name: production-postgres-rw
          port: 5432
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-replica-ingress
  namespace: default
spec:
  entryPoints:
    - postgres-ro # Eğer ikinci bir port açtıysan
  routes:
    - match: HostSNI(`*`)
      services:
        - name: production-postgres-ro
          port: 5432
